# caraml-core

./: .gitignore  .project  Cartfile  Cartfile.resolved  LICENSE.md  README.md  build.gradle  caraml-core.podspec  include.gradle  package-lock.json  package.json  settings.gradle
caraml-core/: .gitignore  .jazzy.yaml  Cartfile.resolved  generate_jazzy_yaml.js
caraml-core-android/: .project  CMakeLists.txt  build.gradle
caraml-core-android/src/androidTest/java/org/liquidplayer/caraml/: ExampleInstrumentedTest.java
caraml-core-android/src/main/: AndroidManifest.xml
caraml-core-android/src/main/cpp/: caraml-core.cpp
caraml-core-android/src/main/java/org/liquidplayer/addon/: Caramlcore.java
caraml-core-android/src/main/java/org/liquidplayer/caraml/: CaramlJS.java  CaramlSurface.java  CaramlView.java
caraml-core-android/src/main/res/values/: attrs.xml  strings.xml
caraml-core-android/src/test/java/org/liquidplayer/caraml/: ExampleUnitTest.java
caraml-core/caraml-core/: CaramlJS.h  CaramlJS.m  CaramlJS_private.h  CaramlView.h  CaramlView.m  CaramlView_private.h  LCCaramlJS.h  LCCaramlJS.m  LCCaramlJS_private.h  LCCaramlSurface.h  LCCaramlView.h  LCCaramlView.m  LCCaramlView_private.h  caraml_core.h  register.m  register.mm
caraml-core/caraml-core.xcodeproj/: project.pbxproj
caraml-core/caraml-core.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gradle/wrapper/: gradle-wrapper.properties
lib/: index.js
mocks/: caramlcore.node.js
release/: caraml-core-release.aar
src/: caraml-core.cpp  caraml-core.h
